# bb-agent-manager

./: .dockerignore  .env  .env.example  .gitignore  BUILDLY_INTEGRATION_READY.md  BUILDLY_LABS_INTEGRATION.md  BUILDLY_LABS_INTEGRATION_GUIDE.md  CODEOWNERS  COPILOT_CURSOR_INTEGRATION.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.http  Dockerfile.prod  ENVIRONMENT_SETUP.md  IDE_INTEGRATION_GUIDE.md  IMPLEMENTATION_COMPLETE.md  INDEX.md  INSTALLATION.md  INTEGRATION_GUIDE.md  LICENSE  PROJECT_STRUCTURE.txt  QUICK_REFERENCE.md  QUICK_START.md  READEME.md  README.md  REORGANIZATION_SUMMARY.md  TEST_RESULTS.md  __init__.py  buildly_mcp_server.py  buildly_workflow.py  claude_bridge.sh  docker-compose.network.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  mcp_server_http.py  mcp_server_stdio.py  nginx.conf  pyproject.toml  requirements-dev.txt  (+6 more)
.github/: copilot-instructions.md
.github/prompts/: buildly-guidelines.md
.github/workflows/: auto-close-issues.yml  code-review.yml  deploy-cloudrun.yml
.venv312/: pyvenv.cfg
bb_agent_manager/: config.py  main.py  mcp_server_stdio.py  oauth.py  orchestrator.py  plugin.py  router.py  server.py
bb_agent_manager/llm/: base.py  claude.py  gemini.py  ollama.py  openai_provider.py  router.py
bb_agent_manager/mcp/: server.py
bb_agent_manager/memory/: __init__.py  markdown_memory.py  memory_service.py
buildly_memory/: INDEX.md  architecture.md  conventions.md  current_focus.md  environments.md  project_links.md  project_overview.md  release_notes.md
devdocs/: AI_TASK_MANAGEMENT.md  ARCHITECTURE.md  TODO.md  index.md  test.md
examples/: api_requests.http
ops/: README.md  startup.sh
scripts/: README.md  ai_task_prioritizer.py  ai_work_coach.py  chat_client.py  mcp_bridge.sh  mcp_stdio_bridge.sh  simple_test_server.py  task_state_manager.py  test_buildly_integration.py  test_issues.py  test_mcp_docker.sh  test_server.py
tests/: README.md  conftest.py  test_labs_create.py
(+9 files in other folders)
