[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bb-agent-manager"
version = "0.1.0"
description = "Buildly Labs MCP Server - AI integration for Buildly platform"
authors = [{name="Buildly Labs", email="dev@buildly.io"}]
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.0.0",        # Official MCP SDK
  "httpx>=0.27",       # For API calls to Buildly Labs
]

[project.entry-points."babblebeaver.modules"]
bb_agent_manager = "bb_agent_manager.plugin:register"
