[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bb-agent-manager"
version = "0.2.0"
description = "Buildly MCP Server — model-agnostic context, memory, and workflow layer for AI coding agents"
authors = [{name="Buildly Labs", email="dev@buildly.io"}]
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.0.0",     # Official MCP Python SDK
  "httpx>=0.27",    # Buildly Labs API calls
  "pydantic>=2.0",  # Settings and validation
]

[project.scripts]
buildly-mcp = "bb_agent_manager.mcp_server_stdio:main"

[tool.setuptools.packages.find]
include = ["bb_agent_manager*"]

